Make correction on GTMK 2022

--- a/site/blog/gmtk-2022.md
+++ b/site/blog/gmtk-2022.md
@@ -15,7 +15,7 @@ tags:
 
 This is how I made a game in 48 hours for GMTK 2022
 
-This past weekend saw the return of the [GMTK Game Jam](https://itch.io/jam/gmtk-jam-2022), the third one in a row. This time the theme was **Roll of the Dice**, which is quite open-ended if you ask me (almost every board game has a dice rolling mechanic in it somewhere. It is the easiest way to generate random numbers in a real world setting, after all.)
+This past weekend saw the return of the [GMTK Game Jam](https://itch.io/jam/gmtk-jam-2022), the sixth one in the series. This time the theme was **Roll of the Dice**, which is quite open-ended if you ask me (almost every board game has a dice rolling mechanic in it somewhere. It is the easiest way to generate random numbers in a real world setting, after all.)
 
 ![Rolling D20](https://c.tenor.com/cZlr0524pIsAAAAC/d20-dice.gif)
 
