Fix Kenney link on GMTK 2022 blog post

--- a/site/blog/gmtk-2022.md
+++ b/site/blog/gmtk-2022.md
@@ -60,7 +60,7 @@ Set my alarm for 7am so I could get a head start on everything I needed to do du
 
 At 10am I walked down the road to grab myself a large, much-required cup of coffee ☕, then turned my camera on to being streaming on the second day. This day I had a bit more activity on my stream, I think. On average I had between 2 - 5 viewers throughout as people would come and go, but there were one or two folks that were along for the entire ride, watching progress and offering feedback and suggestions as I worked. It was really cool!
 
-I spent a lot of time polishing today. I didn't really have a plan, just kinda adding things I thought would improve the player's experience as I went along. This worked out just fine for me. After adding sound effects around (high) noon, I tried my hand at modeling some scenery for the game. I made a cactus that wasn't too bad (in my opinion) but things went quickly downhill after that when I tried to model a simple rock. Unfortunately, although my skills with Blender have certainly expanded in the last 10 months, they are not at the point yet where I can just will things into existence. After a few failed attempts at making this (incredibly simple in my head) rock, I folded and ended up downloading an asset pack from [Kenny](Link), our game dev asset Lord and saviour.
+I spent a lot of time polishing today. I didn't really have a plan, just kinda adding things I thought would improve the player's experience as I went along. This worked out just fine for me. After adding sound effects around (high) noon, I tried my hand at modeling some scenery for the game. I made a cactus that wasn't too bad (in my opinion) but things went quickly downhill after that when I tried to model a simple rock. Unfortunately, although my skills with Blender have certainly expanded in the last 10 months, they are not at the point yet where I can just will things into existence. After a few failed attempts at making this (incredibly simple in my head) rock, I folded and ended up downloading an asset pack from [Kenney](https://www.kenney.nl), our game dev asset Lord and saviour.
 
 I also tried making a cowboy hat for my characters (it _was_ a Western, after all) and also had an incredibly difficult time achieving this. Eventually, I did settle on something resembling a cowboy hat, but it was not a fun or easy process at all. I will have to spend some time honing my modeling skills if I plan to make more 3D games in the future (and I do!). I wanted to add ponchos, bandanas and mustaches to my characters too, but after that cowboy hat fiasco I decided better of it. Besides, I had only a few hours left of the jam and I didn't have any menu screens yet!
 
