Add GMTK 2022 jam results

--- a/site/blog/gmtk-2022.md
+++ b/site/blog/gmtk-2022.md
@@ -95,3 +95,9 @@ I will definitely continue to stream my game jam attempts, but as to whether or 
 
 [You can play my entry "Fistful of Dice" here on itch.io](https://miltage.itch.io/fistful-of-dice)
 
+# Results
+
+The results have been announced! The game placed **#302** overall. Didn't quite make it into the top 100, but I'm still very pleased. Looking forward to participating in the next one!
+
+![Showdown](/images/blog/gmtk2022-results.jpg)
+*I didn't make the top 100, but a 4.0 average is still really good!*
